# anime_agent

./: README.md  main.py  pyproject.toml
mcp_client/: client.py
mcp_server/: server.py
